fix(rightBanner_es_MX.hbs, rightBottomBanner_es_MX.hbs, _safetyTips.scss) using the breakpoints as specified in the story and remove the no visible banner in mobile adding the other one

--- a/app/styles/v2/partials/components/safetyTips/_safetyTips.scss
+++ b/app/styles/v2/partials/components/safetyTips/_safetyTips.scss
@@ -4,6 +4,9 @@ $minHeightCards: 250px;
 $cardsSpacing: 20px;
 $imageContainerHeight: 130px;
 $textContainerHeight: 120px;
+$small-breakpoint: 619px;
+$medium-breakpoint: 939px;
+$large-breakpoint: 940px;
 
 .safety-tips-wrapper {
 	text-align: center;
@@ -108,17 +111,17 @@ $textContainerHeight: 120px;
     }
 }
 
-@include from-breakpoint($medium-break) {
+@media (min-width: $large-breakpoint) {
 	.safety-tips-wrapper {
 	    .safety-tips-container {
 	        .safety-tips-card, .home_rghtbanner {
-	            margin: 0px 18px 0 0;
+	            margin: 0px 16px 0 0;
 	        }
 	    }
 	}
 }
 
-@include to-breakpoint($medium-break) {
+@media (max-width: $medium-breakpoint) {
 	.safety-tips-wrapper {
 		.safety-tips-container {
 			.safety-tips-card {
@@ -128,7 +131,7 @@ $textContainerHeight: 120px;
 	}
 }
 
-@include to-breakpoint($small-break) {
+@media (max-width: $small-breakpoint) {
 	.safety-tips-wrapper {
 		.safety-tips-container {
 			.home_rghtbanner {
